--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
 </head>
-<body class="flex flex-col min-h-screen text-gray-800 font-sans">
+<body class="flex flex-col min-h-screen text-gray-800 font-sans {% block body_bg %}{% endblock %}">
 
   <!-- Nav -->
   <nav class="bg-white py-2 px-4 flex justify-between items-center shadow-lg border-b border-gray-300">
