--- a/templates/features.html
+++ b/templates/features.html
@@ -3,7 +3,7 @@
 {% block title %}Features | DogArmor{% endblock %}
 
 {% block content %}
-<div class="flex flex-col flex-grow bg-orange-200">
+<div class="flex flex-col w-full min-h-full bg-orange-200">
   <!-- Hero Section -->
   <section class="py-24 px-6 text-center">
     <div class="max-w-6xl mx-auto">
